2000-11-08  John Harper  <jsh@eazel.com>

	* version 0.33

2000-10-27  John Harper  <jsh@eazel.com>

	* themer.in (on-preview): don't need to grep for errors in the
	output from make-theme-preview now that remote errors are
	signalled as exceptions

	* themer.in (patterns-update-all): when canonicalising file
	names, expand twice to make sure

2000-09-22  John Harper  <john@dcs.warwick.ac.uk>

	* themer.in (on-preview): fixed typo in require statement
	(patch from Christian Marillat <marillat.christian@wanadoo.fr>)

2000-09-20  John Harper  <john@dcs.warwick.ac.uk>

	* version 0.31

2000-09-02  John Harper  <john@dcs.warwick.ac.uk>

	* themer.in: s/&rest/#!rest/ and s/&optional/#!optional/.
	Replaced all uses of `mapseq' by `do'

2000-07-27  John Harper  <john@dcs.warwick.ac.uk>

	* themer.in: use sawfish.client module instead of calling
	external program

2000-07-25  John Harper  <john@dcs.warwick.ac.uk>

	* themer.glade: set default-size not usize on the top-level
	window

2000-05-27  John Harper  <john@dcs.warwick.ac.uk>

	* themer.in: use glade-xml-signal-connect to manually connect
	signals to handlers where the handlers are defined in the local
	environment (which no longer works from compiled code)

2000-04-25  John Harper  <john@dcs.warwick.ac.uk>

	* themer.in, themer.glade, Makefile.in: s/sawmill/sawfish/
	where appropriate

2000-04-09  John Harper  <john@dcs.warwick.ac.uk>

	* themer.in: require gtk as well as libglade, prevents huge
	compiler warnings

2000-03-21  John Harper  <john@dcs.warwick.ac.uk>

	* themer.in (with-clist-frozen): new macro, used to freeze
	clists when doing multiple updates

2000-02-25  John Harper  <john@dcs.warwick.ac.uk>

	* themer.in: use `quotient' instead of `/' where appropriate.
	Define `quotient' to `/' if unbound

2000-02-24  John Harper  <john@dcs.warwick.ac.uk>

	* themer.in: call recursive-edit not gtk-main in dialogs

2000-01-11  John Harper  <john@dcs.warwick.ac.uk>

	* themer.in (save-to-file): add a call to