@@ -1,3 +1,8 @@
+2001-09-02  John Harper  <jsh@pixelslut.com>
+
+	* themer.in: added some declarations to silence compiler about
+	unused variables
+
 2000-11-08  John Harper  <jsh@eazel.com>
 
 	* version 0.33
